# candle_batch_aggregator

./: Cargo.toml  README.md
examples/: clickhouse_batch.rs  duckdb_batch.rs  parquet_batch.rs  questdb_batch.rs
src/: aggregation.rs  chain.rs  main.rs
src/formats/: clickhouse.rs  csv.rs  duckdb.rs  parquet.rs  questdb.rs
tasks/: candle_batch_aggregator.md
