[package]
name = "candle_batch_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
serde = { version = "1.0", features = ["derive"] }
candle_generator = { path = "../candle_generator" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
# duckdb = "0.9"
urlencoding = "2.1"
